include ../../../../Make.vars 

EXTRA_DIST = \
	meta.xml \
    test_example.py \
    test_example.sh \
	__init__.py \
	TEST_DIRECTORY

NOX_RUNTIMEFILES = \
    meta.xml \
    test_example.py \
    test_example.sh \
	__init__.py \
	TEST_DIRECTORY

all-local: nox-all-local
install-exec-hook: nox-install-local
